src/styles/index.css
@import url("https://fonts.googleapis.com/css2?family=Nunito&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

input,
button {
  font: inherit;
}

html {
  font-size: 1.5rem;
}

body {
  background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/8/86/Brandenburg_Tor_Berlin_greyscale.jpg/800px-Brandenburg_Tor_Berlin_greyscale.jpg?20110908143013");
  opacity: 0.9;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: 100% 100%;
  font-family: "Nunito", sans-serif;
}

p {
  color: whitesmoke;
  font-family: "Nunito", sans-serif;
}

article {
  margin: 1em;
  padding: 1em;
  padding-bottom: 2em;
  background-color: #668586;
  color: whitesmoke;
  border-radius: 15px;
}
article p {
  margin-top: 2em;
}

img {
  border-radius: 15px;
  display: block;
}

header {
  padding: 1em;
  display: flex;
  justify-content: center;
  align-items: center;
}

.navBar a {
  text-decoration: none;
}

.navBar img {
  width: 3em;
}

.navBar {
  background-color: #668586;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1rem;
  width: 100%;
}

.navBar ul {
  list-style: none;
  display: flex;
  gap: 1rem;
  text-decoration: none;
}

.navBar li {
  color: white;
}

.navBar li:hover {
  color: black;
  transition: 0.7s;
}

.search {
  width: 95%;
  border: 2px solid #000;
  border-radius: 2em;
  overflow: hidden;
  font-size: 1rem;
  display: flex;
  flex-flow: row nowrap;
}

.search:focus-within {
  box-shadow: 2px 2px 5px #000;
}

.search__button,
.search__input {
  background-color: #fff;
  border: none;
  outline: none;
}

.search__input {
  padding: 1em;
  width: 85%;
}

.search__button {
  width: 15%;
  font-size: 1.5rem;
  padding-right: 0.5em;
  color: gray;
  display: grid;
  place-content: center;
}

@media (min-width: 576px) {
  .search {
    font-size: 1.5rem;
  }

  .search__button {
    font-size: 2rem;
  }
}

@media (min-width: 800px) {
  .search {
    width: 75%;
    font-size: 2rem;
  }

  .search__button {
    padding-right: 0.5em;
    font-size: 3rem;
  }
}

h1 {
  color: whitesmoke;
  text-align: center;
  font-size: 2.5rem;
  margin: 1em;
  background-color: #668586;
  color: whitesmoke;
  border-radius: 15px;
}

#datum {
  float: left;
}

#von-bis {
  padding-top: 0.35rem;
  float: right;
}

#no-matches {
  text-align: center;
  font-size: 2em;
  margin-top: auto;
}
#adress {
  float: left;
}
#strecke-popup {
  float: right;
  position: relative;
  bottom: 44px;
  padding: 6px 14px;
  border-radius: 6px;
  border: none;
  text-decoration: none;
  color: #fff;
  background-color: #201e1f;
  background-origin: border-box;
  box-shadow: 0px 0.5px 1.5px rgba(54, 122, 246, 0.25),
    inset 0px 0.8px 0px -0.25px rgba(255, 255, 255, 0.2);
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
}

#maps-link {
  float: right;
  position: relative;
  bottom: 9px;
  padding: 6px 14px;
  border-radius: 6px;
  border: none;
  text-decoration: none;
  color: #fff;
  background-color: #201e1f;
  background-origin: border-box;
  box-shadow: 0px 0.5px 1.5px rgba(54, 122, 246, 0.25),
    inset 0px 0.8px 0px -0.25px rgba(255, 255, 255, 0.2);
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
}
#zeigen-button {
  float: right;
  position: relative;
  bottom: -5px;
  right: 26px;
  padding: 6px 14px;
  border-radius: 6px;
  border: none;
  text-decoration: none;
  color: #fff;
  background-color: #201e1f;
  background-origin: border-box;
  box-shadow: 0px 0.5px 1.5px rgba(54, 122, 246, 0.25),
    inset 0px 0.8px 0px -0.25px rgba(255, 255, 255, 0.2);
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
}
#none {
  width: 0px;
  height: 0px;
  opacity: 0;
}

/* Adding style to the calendar */

.calendarCard {
  align-items: center;
  background-color: #668586;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  border-radius: 15px;
  padding: 15px;
  margin: 10px;
  border-radius: 10px;
  height: fit-content;
  width: 10rem;
  overflow-wrap: break-word;
}

.datumStyle {
  background-color: whitesmoke;
  width: 5.5rem;
  color: black;
  height: auto;
  padding-top: 5px;
  padding-bottom: 5px;
  margin: 0px;
  margin-left: 1.5rem;
}

.allCalendarCards {
  display: flex;
  padding: 10px;
  justify-content: space-evenly;
  flex-wrap: wrap;
}

#year,
#months {
  width: 30%;
  height: 10%;
  padding-top: 5px;
  padding-bottom: 5px;
  text-align: center;
  margin-left: 1rem;
}

.textmonths {
  margin-left: 1.75rem;
  padding: 0.4em;
  width: 45%;
  margin-top: 1rem;
  background-color: #668586;
  color: whitesmoke;
  border-radius: 15px;
}
.textyear {
  margin-left: 1.75rem;
  padding: 0.4em;
  width: 40%;
  margin-top: 1rem;
  margin-bottom: 1rem;
  background-color: #668586;
  color: whitesmoke;
  border-radius: 15px;
}
.date-above-calender {
  background-color: #668586;
  color: whitesmoke;
  border-radius: 15px;
  margin: 0.5em;
  margin-left: 1.75rem;
  padding: 0.3em;
  font-size: 1.5rem;
}
/* impressum */

.impressum-block {
  margin: 1em;
  margin-bottom: 3rem;
  padding: 1em;
  padding-bottom: 2em;
  background-color: #668586;
  color: whitesmoke;
  border-radius: 15px;
}
#lizenz {
  border-radius: 0px;
  display: inline-block;
}

.impressum-header {
  text-align: center;
  padding-top: 2em;
}

.block-text {
  display: inline-block;
  padding: 2em;
  padding-left: 1rem;
  padding-right: 1em;
  background-color: #668586;
}
.block-text a {
  color: black;
}
.envelope {
  color: #000;
}

.names {
  display: flex;
  justify-content: space-evenly;
  padding-top: 2em;
}

@media (min-width: 1000px) {
  .block-text {
    padding-left: 10rem;
    padding-right: 10em;
  }
}

